--- a/templates/base-back.html.twig
+++ b/templates/base-back.html.twig
@@ -27,7 +27,7 @@
             content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Dashboard - Analytics | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Sahti APP</title>
 
     <meta name="description" content="" />
 
@@ -64,7 +64,7 @@
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="{{ asset('assets/js/config.js')}}"></script>
 </head>
-    <body>
+
     <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
@@ -72,7 +72,7 @@
 
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
-                    <a href="" class="app-brand-link">
+                    <a href="/" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <svg
                         width="25"
@@ -576,8 +576,6 @@
                             <!-- Content -->
                             {% block body %}
                             {% endblock %}
-
-                            <div class="content-backdrop fade"></div>
                         </div>
                         <!-- Content wrapper -->
                     </div>
@@ -616,6 +614,5 @@
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    </body>
 
 </html>
