--- a/templates/base-front.html.twig
+++ b/templates/base-front.html.twig
@@ -111,6 +111,13 @@
                                     <li><a href="">Trainers</a></li>
                                     <li><a href="/about">About</a></li>
                                     <li><a href="">Contact</a></li>
+                                    <li>
+                                        <a href="/login" class="btn btn-primary">
+                                            Login
+                                        </a>
+                                    </li>
+
+
                                 </ul>
                             </nav>
                         </div>
@@ -126,7 +133,7 @@
                                 <div class="col-md-7">
                                     <h2>Fitness &amp; Health <br>is a <b>Mentality</b></h2>
                                     {#                                        <p><span>Created with <i class="icon-heart3"></i> by the fine folks at <a href="http://freehtml5.co" class="fh5co-site-name">FreeHTML5.co</a></span></p>#}
-                                    <span><a class="btn btn-primary" href="#">Start Your Journey</a></span>
+                                    <span><a class="btn btn-primary" href="/signupin">Start Your Journey</a></span>
                                 </div>
                             </div>
                         </div>
