--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,221 +1,101 @@
-
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Sahti APP</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-        <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-        <meta name="author" content="FREEHTML5.CO" />
 
-        <!--
-          //////////////////////////////////////////////////////
+<!-- =========================================================
+* Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
+==============================================================
 
-          FREE HTML5 TEMPLATE
-          DESIGNED & DEVELOPED by FREEHTML5.CO
+* Product Page: https://themeselection.com/products/sneat-bootstrap-html-admin-template/
+* Created by: ThemeSelection
+* License: You must have a valid license purchased in order to legally use the theme for your project.
+* Copyright ThemeSelection (https://themeselection.com)
 
-          Website: 		http://freehtml5.co/
-          Email: 			info@freehtml5.co
-          Twitter: 		http://twitter.com/fh5co
-          Facebook: 		https://www.facebook.com/fh5co
+=========================================================
+ -->
+<!-- beautify ignore:start -->
+<html
+        lang="en"
+        class="light-style customizer-hide"
+        dir="ltr"
+        data-theme="theme-default"
+        data-assets-path="../assets/"
+        data-template="vertical-menu-template-free"
+>
+<head>
+    <meta charset="utf-8" />
+    <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
 
-          //////////////////////////////////////////////////////
-           -->
+    <title>Sahti APP</title>
 
-        <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content=""/>
-        <meta property="og:image" content=""/>
-        <meta property="og:url" content=""/>
-        <meta property="og:site_name" content=""/>
-        <meta property="og:description" content=""/>
-        <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="" />
-        <meta name="twitter:url" content="" />
-        <meta name="twitter:card" content="" />
+    <meta name="description" content="" />
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="shortcut icon" href="{{ asset('favicon.ico')}}">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico')}}" />
 
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,900' rel='stylesheet' type='text/css'>
-            <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+            rel="stylesheet"
+    />
 
-            <!-- Animate.css -->
-            <link rel="stylesheet" href="{{ asset('css/animate.css')}}">
-            <!-- Icomoon Icon Fonts-->
-            <link rel="stylesheet" href="{{ asset('css/icomoon.css')}}">
-            <!-- Bootstrap  -->
-            <link rel="stylesheet" href="{{ asset('css/bootstrap.css')}}">
-            <!-- Superfish -->
-            <link rel="stylesheet" href="{{ asset('css/superfish.css')}}">
+    <!-- Icons. Uncomment required icon fonts -->
+    <link rel="stylesheet" href="{{ asset('assets/vendor/fonts/boxicons.css')}}" />
 
-            <link rel="stylesheet" href="{{ asset('css/style.css')}}">
-            <link rel="stylesheet" href="{{ asset('css/style.css')}}">
-        {% endblock %}
+    <!-- Core CSS -->
+    <link rel="stylesheet" href="{{ asset('assets/vendor/css/core.css')}}" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="{{ asset('assets/vendor/css/theme-default.css')}}" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="{{ asset('assets/css/demo.css')}}" />
 
-        {% block javascripts %}
-            <!-- Modernizr JS -->
-            <script src="{{ asset('js/modernizr-2.6.2.min.js')}}"></script>
-            <!-- FOR IE9 below -->
-            <!--[if lt IE 9]>
-            <script src="{{ asset('js/respond.min.js')}}"></script>
+    <!-- Vendors CSS -->
+    <link rel="stylesheet" href="{{ asset('assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css')}}" />
 
-            <![endif]-->
-        {% endblock %}
-    </head>
-    {% block body %}
+    <!-- Page CSS -->
+    <!-- Page -->
+    <link rel="stylesheet" href="{{ asset('assets/vendor/css/pages/page-auth.css')}}" />
+    <!-- Helpers -->
+    <script src="{{ asset('assets/vendor/js/helpers.js')}}"></script>
 
-{#    header#}
-{#        <div id="fh5co-wrapper">#}
-{#            <div id="fh5co-page">#}
-{#                <div id="fh5co-header">#}
-{#                    <header id="fh5co-header-section">#}
-{#                        <div class="container">#}
-{#                            <div class="nav-header">#}
-{#                                <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>#}
-{#                                <h1 id="fh5co-logo"><a href="/">SAH<span>TI</span></a></h1>#}
-{#                                <!-- START #fh5co-menu-wrap -->#}
-{#                                <nav id="fh5co-menu-wrap" role="navigation">#}
-{#                                    <ul class="sf-menu" id="fh5co-primary-menu">#}
-{#                                        <li class="active">#}
-{#                                            <a href="/">Home</a>#}
-{#                                        </li>#}
-{#                                        <li>#}
-{#                                            <a href="" class="fh5co-sub-ddown">Classes</a>#}
-{#                                            <ul class="fh5co-sub-menu">#}
-{#                                                <li><a href="">Web Development</a></li>#}
-{#                                                <li><a href="">Branding &amp; Identity</a></li>#}
-{#                                                <li>#}
-{#                                                    <a href="#" class="fh5co-sub-ddown">Free HTML5</a>#}
-{#                                                    <ul class="fh5co-sub-menu">#}
-{#                                                        <li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>#}
-{#                                                        <li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>#}
-{#                                                        <li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>#}
-{#                                                        <li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>#}
-{#                                                        <li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>#}
-{#                                                        <li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>#}
-{#                                                    </ul>#}
-{#                                                </li>#}
-{#                                                <li><a href="#">UI Animation</a></li>#}
-{#                                                <li><a href="#">Copywriting</a></li>#}
-{#                                                <li><a href="#">Photography</a></li>#}
-{#                                            </ul>#}
-{#                                        </li>#}
-{#                                        <li>#}
-{#                                            <a href="">Schedule</a>#}
-{#                                        </li>#}
-{#                                        <li><a href="">Trainers</a></li>#}
-{#                                        <li><a href="/about">About</a></li>#}
-{#                                        <li><a href="">Contact</a></li>#}
-{#                                    </ul>#}
-{#                                </nav>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </header>#}
-{#                </div>#}
-{#                <div class="fh5co-hero">#}
-{#                    <div class="fh5co-overlay"></div>#}
-{#                    <div class="fh5co-cover" data-stellar-background-ratio="0.5" style="background-image: url(images/home-image.jpg);">#}
-{#                        <div class="desc animate-box">#}
-{#                            <div class="container">#}
-{#                                <div class="row">#}
-{#                                    <div class="col-md-7">#}
-{#                                        <h2>Fitness &amp; Health <br>is a <b>Mentality</b></h2>#}
-{#                                        <p><span>Created with <i class="icon-heart3"></i> by the fine folks at <a href="http://freehtml5.co" class="fh5co-site-name">FreeHTML5.co</a></span></p>#}
-{#                                        <span><a class="btn btn-primary" href="#">Start Your Journey</a></span>#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
+    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
+    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
+    <script src="{{ asset('assets/js/config.js')}}"></script>
+</head>
 
-{#                <!-- end:fh5co-header -->#}
+<body>
+<!-- Content -->
+
+<div class="container-xxl">
+    <div class="authentication-wrapper authentication-basic container-p-y">
+        <div class="authentication-inner py-4">
+            {% block body %}
+            {% endblock %}
+        </div>
+    </div>
+</div>
 
 
-{#                <!-- footer -->#}
-{#                <footer>#}
-{#                    <div id="footer">#}
-{#                        <div class="container">#}
-{#                            <div class="row">#}
-{#                                <div class="col-md-4 animate-box">#}
-{#                                    <h3 class="section-title">About Us</h3>#}
-{#                                    <p> SahtiAPP is an application designed by creativity crew to help people shape their bodies , Our application provide both trainers and nutritionists to help guide you achieving your goals we also have an online shop   .</p>#}
-{#                                </div>#}
 
-{#                                <div class="col-md-4 animate-box">#}
-{#                                    <h3 class="section-title">Our Address</h3>#}
-{#                                    <ul class="contact-info">#}
-{#                                        <li><i class="icon-map-marker"></i>  Ghazela , Ariana</li>#}
-{#                                        <li><i class="icon-phone"></i>+ 1235 2355 98</li>#}
-{#                                        <li><i class="icon-envelope"></i><a href="#">noreplysahti@gmail.com</a></li>#}
-{#                                        <li><i class="icon-globe2"></i><a href="#">www.sahti.com</a></li>#}
-{#                                    </ul>#}
-{#                                </div>#}
-{#                                <div class="col-md-4 animate-box">#}
-{#                                    <h3 class="section-title">Drop us a line</h3>#}
-{#                                    <form class="contact-form">#}
-{#                                        <div class="form-group">#}
-{#                                            <label for="name" class="sr-only">Name</label>#}
-{#                                            <input type="name" class="form-control" id="name" placeholder="Name">#}
-{#                                        </div>#}
-{#                                        <div class="form-group">#}
-{#                                            <label for="email" class="sr-only">Email</label>#}
-{#                                            <input type="email" class="form-control" id="email" placeholder="Email">#}
-{#                                        </div>#}
-{#                                        <div class="form-group">#}
-{#                                            <label for="message" class="sr-only">Message</label>#}
-{#                                            <textarea class="form-control" id="message" rows="7" placeholder="Message"></textarea>#}
-{#                                        </div>#}
-{#                                        <div class="form-group">#}
-{#                                            <input type="submit" id="btn-submit" class="btn btn-send-message btn-md" value="Send Message">#}
-{#                                        </div>#}
-{#                                    </form>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                            <div class="row copy-right">#}
-{#                                <div class="col-md-6 col-md-offset-3 text-center">#}
-{#                                    <p class="fh5co-social-icons">#}
-{#                                        <a href="#"><i class="icon-facebook2"></i></a>#}
-{#                                        <a href="#"><i class="icon-instagram"></i></a>#}
+<!-- Core JS -->
+<!-- build:js assets/vendor/js/core.js -->
+<script src="{{ asset('assets/vendor/libs/jquery/jquery.js')}}"></script>
+<script src="{{ asset('assets/vendor/libs/popper/popper.js')}}"></script>
+<script src="{{ asset('assets/vendor/js/bootstrap.js')}}"></script>
+<script src="{{ asset('assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js')}}"></script>
 
-{#                                    </p>#}
-{#                                    <p>Copyright  Fitness . All Rights Reserved. </p>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </footer>#}
+<script src="{{ asset('assets/vendor/js/menu.js')}}"></script>
+<!-- endbuild -->
 
+<!-- Vendors JS -->
 
-{#            </div>#}
-{#            <!-- END fh5co-page -->#}
+<!-- Main JS -->
+<script src="{{ asset('assets/js/main.js')}}"></script>
 
-{#        </div>#}
+<!-- Page JS -->
 
-
-    <script src="{{ asset('js/jquery.min.js')}}"></script>
-    <!-- jQuery Easing -->
-    <script src="{{ asset('js/jquery.easing.1.3.js') }}" ></script>
-    <!-- Bootstrap -->
-    <script src="{{ asset('js/bootstrap.min.js')}}"></script>
-    <!-- Waypoints -->
-    <script src="{{ asset('js/jquery.waypoints.min.js')}}"></script>
-    <!-- Stellar -->
-    <script src="{{ asset('js/jquery.stellar.min.js')}}"></script>
-    <!-- Superfish -->
-    <script src="{{ asset('js/hoverIntent.js')}}"></script>
-    <script src="{{ asset('js/superfish.js')}}"></script>
-
-    <!-- Main JS (Do not remove) -->
-    <script src="{{ asset('js/main.js')}}"></script>
-
-
-    {% endblock  %}
-
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+</body>
 </html>
