--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -3,5 +3,66 @@
 {% block title %}Hello LoginController!{% endblock %}
 
 {% block body %}
+    <div class="card">
+        <div class="card-body">
+            <!-- Logo -->
+            <div class="app-brand justify-content-center">
+                <a href="/" class="app-brand-link gap-2">
+                    <img src="{{ asset('images/SAHTI without bg.png') }} " height="150px" width="100%" />
+                </a>
+            </div>
+            <!-- /Logo -->
+            <h4 class="mb-2">Welcome to Sahti! 👋</h4>
+            <p class="mb-4">Please sign-in to your account and start the adventure</p>
 
+            <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email or Username</label>
+                    <input
+                            type="text"
+                            class="form-control"
+                            id="email"
+                            name="email-username"
+                            placeholder="Enter your email or username"
+                            autofocus
+                    />
+                </div>
+                <div class="mb-3 form-password-toggle">
+                    <div class="d-flex justify-content-between">
+                        <label class="form-label" for="password">Password</label>
+                        <a href="/resetpwd">
+                            <small>Forgot Password?</small>
+                        </a>
+                    </div>
+                    <div class="input-group input-group-merge">
+                        <input
+                                type="password"
+                                id="password"
+                                class="form-control"
+                                name="password"
+                                placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                                aria-describedby="password"
+                        />
+                        <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="remember-me" />
+                        <label class="form-check-label" for="remember-me"> Remember Me </label>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+                </div>
+            </form>
+
+            <p class="text-center">
+                <span>New on our platform?</span>
+                <a href="/signupin">
+                    <span>Create an account</span>
+                </a>
+            </p>
+        </div>
+    </div>
 {% endblock %}
