--- a/templates/signupclient/registre.html.twig
+++ b/templates/signupclient/registre.html.twig
@@ -6,79 +6,83 @@
 
 {% block body %}
 
-    <section class="vh-100 bg-image"
-             style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-        <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-            <div class="container h-100">
-                <div class="row d-flex justify-content-center align-items-center h-100">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                        <div class="card" style="border-radius: 15px;">
-                            <div class="card-body p-5">
-                                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_start(formC ,{'attr': {'novalidate': 'novalidate'}}) }}
-                                            <div class="form-outline mb-4">
-                                                {{ form_errors(formC.nom) }}
-                                                {{ form_widget(formC.nom, { 'attr': {'style': 'width: 250px'} })}}
-                                            </div>
-
-                                            <div class="form-outline mb-4">
-                                                {{ form_errors(formC.prenom) }}
-                                                {{ form_widget(formC.prenom, { 'attr': {'style': 'width: 250px'} }) }}
-
-                                            </div>
-
-                                            <div class="form-outline mb-4">
-                                                {{ form_errors(formC.email) }}
-                                                {{ form_widget(formC.email, { 'attr': {'style': 'width: 250px'} }) }}
-                                            </div>
-                                            <div class="form-outline mb-4">
-                                                {{ form_errors(formC.passwd) }}
-                                                {{ form_widget(formC.passwd, { 'attr': {'style': 'width: 250px'} }) }}
-                                            </div>
-
-                                            <div class="form-outline mb-4">
-
-                                                {{ form_errors(formC.adresse) }}
-                                                {{ form_widget(formC.adresse , { 'attr': {'style': 'width: 250px'} }) }}
-
-                                            </div>
-
-                                        </div>
-                                        <div class="col">
-                                            <div class="form-outline mb-4">
-                                                {{ form_errors(formC.datenaiss) }}
-                                                {{ form_widget(formC.datenaiss , { 'attr': {'style': 'width: 250px'} }) }}
-                                            </div>
-                                            <div class="form-outline mb-4">
-                                                {{ form_errors(formC.img) }}
-                                                {{ form_widget(formC.img , { 'attr': {'style': 'width: 250px'} }) }}
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="d-flex justify-content-center">
-
-                                        {{ form_widget(formC.Registre, { 'attr': {'class': 'btn btn-success btn-block btn-lg gradient-custom-4 text-body'}}) }}
-
-                                    </div>
-                                     <div class="d-flex justify-content-center">
-
-                                         {{ form_widget(formC.Cancel, { 'attr': {'class': 'btn btn-danger btn-block btn-lg gradient-custom-4 text-body'}}) }}
-
-                                     </div>
-                                    {{ form_end(formC) }}
-                                    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
-                                                                                                            class="fw-bold text-body"><u>Login
-                                                here</u></a></p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="card">
+        <div class="card-body">
+            <!-- Logo -->
+            <div class="app-brand justify-content-center">
+                    <a href="/" class="app-brand-link gap-2">
+                        <img src="{{ asset('images/SAHTI without bg.png') }} " height="150px" width="100%" />
+                    </a>
             </div>
+            <!-- /Logo -->
+            <div class="text-center">
+                <img src="{{ asset('images/utilisateur.png') }} "  height="90px" width="30%" />
+                <h4 class="mb-2">Adventure starts here 🚀</h4>
+                <p class="mb-4">Sign up as a client and enjoy our services </p>
+            </div>
+            {{ form_start(formC , {'attr': {'novalidate':'novalidate'}}) }}
+                <div class="mb-3">
+                    {{ form_widget(formC.nom, { 'attr': {'class': 'form-control','style': 'width: 350px'} })}}
+                    {{ form_errors(formC.nom ) }}
+
+                </div>
+                <div class="mb-3">
+                    {{ form_widget(formC.prenom, { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                    {{ form_errors(formC.prenom) }}
+
+                </div>
+                <div class="mb-3">
+                    {{ form_widget(formC.email, { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                    {{ form_errors(formC.email) }}
+
+                </div>
+                <div class="mb-3 form-password-toggle">
+                    <div class="input-group input-group-merge">
+
+                        {{ form_widget(formC.passwd, { 'attr': {'class': 'form-control'} }) }}
+                        <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                    </div>
+                    {{ form_errors(formC.passwd) }}
+
+                </div>
+                <div class="mb-3">
+                    {{ form_widget(formC.adresse , { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                    {{ form_errors(formC.adresse) }}
+
+                </div>
+                 <div class="mb-3">
+                     <label class="form-label" >Date of birth</label>
+                    {{ form_widget(formC.date , { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                     {{ form_errors(formC.date) }}
+                 </div>
+                 <div class="mb-3">
+{#                class="form-control"#}
+                     <label class="form-label" >Profile Picture</label>
+                     {{ form_widget(formC.imgFile , { 'attr': {'class': 'form-control'} }) }}
+                     {{ form_errors(formC.imgFile) }}
+
+                 </div>
+            {{ form_widget(formC.Registre, { 'attr': {'class': 'btn btn-primary d-grid w-100'}}) }}
+            {{ form_widget(formC.Cancel, { 'attr': {'class': 'btn btn-danger d-grid w-100'}}) }}
+            {{ form_end(formC) }}
+
+
+            <p class="text-center">
+                <span>Already have an account?</span>
+                <a href="/login">
+                    <span>Sign in instead</span>
+                </a><br/>
+                <a href="/signupin">
+                    <span>Create an another type of account</span>
+                </a>
+            </p>
+            <p class="text-center">
+{#                <span>New on our platform?</span>#}
+
+            </p>
         </div>
-    </section>
+    </div>
+    <!-- Register Card -->
+
 {% endblock %}
 
