--- a/templates/signupin/index.html.twig
+++ b/templates/signupin/index.html.twig
@@ -2,308 +2,51 @@
 
 {% block title %}Hello SignupinController!{% endblock %}
 {% block stylesheets %}
-    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
-
-    * {
-    box-sizing: border-box;
-    }
-
-    body {
-    background: #f6f5f7;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: 'Montserrat', sans-serif;
-    height: 100vh;
-    margin: -20px 0 50px;
-    }
-
-    h1 {
-    font-weight: bold;
-    margin: 0;
-    }
-
-    h2 {
-    text-align: center;
-    }
-
-    p {
-    font-size: 14px;
-    font-weight: 100;
-    line-height: 20px;
-    letter-spacing: 0.5px;
-    margin: 20px 0 30px;
-    }
-
-    span {
-    font-size: 12px;
-    }
-
-    a {
-    color: #333;
-    font-size: 14px;
-    text-decoration: none;
-    margin: 15px 0;
-    }
-
-    button {
-    border-radius: 20px;
-    border: 1px solid #8BCB37;
-    background-color: #8BCB37;
-    /*background: linear-gradient(to right, #8FFC00, #497E04);*/
-
-    color: #FFFFFF;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 12px 45px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    transition: transform 80ms ease-in;
-    }
-
-    button:active {
-    transform: scale(0.95);
-    }
-
-    button:focus {
-    outline: none;
-    }
-
-    button.ghost {
-    background-color: transparent;
-    border-color: #FFFFFF;
-    }
-
-    form {
-    background-color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 50px;
-    height: 100%;
-    text-align: center;
-    }
-
-    input {
-    background-color: #eee;
-    border: none;
-    padding: 12px 15px;
-    margin: 8px 0;
-    width: 100%;
-    }
-
-    .container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25),
-    0 10px 10px rgba(0,0,0,0.22);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 480px;
-    }
-
-    .form-container {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transition: all 0.6s ease-in-out;
-    }
-
-    .sign-in-container {
-    left: 0;
-    width: 50%;
-    z-index: 2;
-    }
-
-    .container.right-panel-active .sign-in-container {
-    transform: translateX(100%);
-    }
-
-    .sign-up-container {
-    left: 0;
-    width: 50%;
-    opacity: 0;
-    z-index: 1;
-    }
-
-    .container.right-panel-active .sign-up-container {
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 5;
-    animation: show 0.6s;
-    }
-
-    @keyframes show {
-    0%, 49.99% {
-    opacity: 0;
-    z-index: 1;
-    }
-
-    50%, 100% {
-    opacity: 1;
-    z-index: 5;
-    }
-    }
-
-    .overlay-container {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    transition: transform 0.6s ease-in-out;
-    z-index: 100;
-    }
-
-    .container.right-panel-active .overlay-container{
-    transform: translateX(-100%);
-    }
-
-    .overlay {
-    /*background: #FF416C;*/
-    background: -webkit-linear-gradient(to bottom, #7BCF0C, #BCCAAA);
-    background: linear-gradient(to bottom, #7BCF0C, #BCCAAA);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 0 0;
-    color: #FFFFFF;
-    position: relative;
-    left: -100%;
-    height: 100%;
-    width: 200%;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
-    }
-
-    .container.right-panel-active .overlay {
-    transform: translateX(50%);
-    }
-
-    .overlay-panel {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    top: 0;
-    height: 100%;
-    width: 50%;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
-    }
-
-    .overlay-left {
-    transform: translateX(-20%);
-    }
-
-    .container.right-panel-active .overlay-left {
-    transform: translateX(0);
-    }
-
-    .overlay-right {
-    right: 0;
-    transform: translateX(0);
-    }
-
-    .container.right-panel-active .overlay-right {
-    transform: translateX(20%);
-    }
-
-    .social-container {
-    margin: 20px 0;
-    }
-
-    .social-container a {
-    border: 1px solid #DDDDDD;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 5px;
-    height: 40px;
-    width: 40px;
-    }
 {% endblock %}
+
 {% block body %}
-    <section class="vh-100 bg-image"
-             style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-        <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-            <div class="container h-100">
-                <div class="row d-flex justify-content-center align-items-center h-100">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                        <div class="card" style="border-radius: 15px;">
-                            <div class="card-body p-5">
-                                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="form-outline mb-4">
-                                        </div>
+    <div class="card">
+        <div class="card-body">
+            <!-- Logo -->
+            <div class="app-brand justify-content-center">
+                <a href="/" class="app-brand-link gap-2">
+                    <img src="{{ asset('images/SAHTI without bg.png') }} " height="150px" width="100%"  />
+                </a>
+            </div>
+            <!-- /Logo -->
+            <h4 class="mb-2">Adventure starts here 🚀</h4>
+            <p class="mb-4">Make your app management easy and fun!</p>
+            <div class="row " style="margin-bottom: 6px">
 
-                                        <div class="form-outline mb-4">
+                <a href="/registreclient" class="btn btn-secondary btn-rounded">
+                    <img src="{{ asset('images/iconuser.png') }}  " height="30px" width="10%"  />
 
-                                        </div>
+                    Sign up as Client
+                </a>
+            </div>
+            <div class="row " style="margin-bottom: 6px">
 
-                                        <div class="form-outline mb-4">
-                                        </div>
-                                        <div class="form-outline mb-4">
-                                        </div>
+            <a href="/registrecoach" class="btn btn-info btn-rounded">
+                <img src="{{ asset('images/iconcoach.png') }}  " height="30px" width="10%"  />
 
-                                        <div class="form-outline mb-4">
+                Sign up as Coach
+                </a>
+            </div>
+            <div class="row " style="margin-bottom: 6px">
 
-                                        </div>
-
-                                        <div class="form-outline mb-4">
-                                        </div>
-
-                                    </div>
-                                    <div class="col">
-                                        <div class="form-outline mb-4">
-                                        </div>
-                                        <div class="form-outline mb-4">
-                                        </div>
-
-                                    </div>
-                                </div>
-
-                                <div class="container" id="container">
-                                    <div class="form-container sign-up-container">
-                                      <p> test1</p>
-                                    </div>
-                                    <div class="form-container sign-in-container">
-                                        <p> test2</p>
-                                    </div>
-                                    <div class="overlay-container">
-                                        <div class="overlay">
-                                            <div class="overlay-panel overlay-left">
-                                                <h1>Welcome Back!</h1>
-                                                <p>To keep connected with us please login with your personal info</p>
-                                                <button class="ghost" id="signIn">Sign In</button>
-                                            </div>
-                                            <div class="overlay-panel overlay-right">
-                                                <h1>Hello, Friend!</h1>
-                                                <p>Enter your personal details and start journey with us</p>
-                                                <button class="ghost" id="signUp">Sign Up</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <a href="/registrenutri" class="btn btn-primary btn-rounded">
+                <img src="{{ asset('images/iconnutri.png') }}  " height="30px" width="10%"  />
+                Sign up as Nutritionist
+                </a>
             </div>
         </div>
-    </section>
+        <p class="text-center">
+            <span>Already have an account?</span>
+            <a href="/login">
+                <span>Sign in instead</span>
+            </a>
 
+        </p>
+    </div>
 
 {% endblock %}
