--- a/templates/signupnutri/registre.html.twig
+++ b/templates/signupnutri/registre.html.twig
@@ -1,88 +1,85 @@
-{% extends 'base-back.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %} {% endblock %}
 
 {% block body %}
-
-    <section class="vh-100 bg-image"
-             style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-        <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-            <div class="container h-100">
-                <div class="row d-flex justify-content-center align-items-center h-100">
-                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                        <div class="card" style="border-radius: 15px;">
-                            <div class="card-body p-5">
-                                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
-                                <div class="row">
-                                    <div class="col">
-                                        {{ form_start(formN ,{'attr': {'novalidate': 'novalidate'}}) }}
-                                        <div class="form-outline mb-4">
-                                            {{ form_errors(formN.nom) }}
-                                            {{ form_widget(formN.nom, { 'attr': {'style': 'width: 250px'} })}}
-                                        </div>
-
-                                        <div class="form-outline mb-4">
-                                            {{ form_errors(formN.prenom) }}
-                                            {{ form_widget(formN.prenom, { 'attr': {'style': 'width: 250px'} }) }}
-
-                                        </div>
-
-                                        <div class="form-outline mb-4">
-                                            {{ form_errors(formN.email) }}
-                                            {{ form_widget(formN.email, { 'attr': {'style': 'width: 250px'} }) }}
-                                        </div>
-                                        <div class="form-outline mb-4">
-                                            {{ form_errors(formN.passwd) }}
-                                            {{ form_widget(formN.passwd, { 'attr': {'style': 'width: 250px'} }) }}
-                                        </div>
-
-                                        <div class="form-outline mb-4">
-
-                                            {{ form_errors(formN.adresse) }}
-                                            {{ form_widget(formN.adresse , { 'attr': {'style': 'width: 250px'} }) }}
-
-                                        </div>
-
-                                        <div class="form-outline mb-4">
-                                            {{ form_errors(formN.bio) }}
-                                            {{ form_widget(formN.bio , { 'attr': {'style': 'width: 250px'} }) }}
-                                        </div>
-
-                                    </div>
-                                    <div class="col">
-                                        <div class="form-outline mb-4">
-                                            {{ form_errors(formN.certification) }}
-                                            {{ form_widget(formN.certification , { 'attr': {'style': 'width: 250px'} }) }}
-                                        </div>
-                                        <div class="form-outline mb-4">
-                                            {{ form_errors(formN.img) }}
-                                            {{ form_widget(formN.img , { 'attr': {'style': 'width: 250px'} }) }}
-                                        </div>
-
-                                    </div>
-                                </div>
-
-                                <div class="d-flex justify-content-center">
-
-                                    {{ form_widget(formN.Registre, { 'attr': {'class': 'btn btn-success btn-block btn-lg gradient-custom-4 text-body'}}) }}
-
-                                </div>
-                                <div class="d-flex justify-content-center">
-
-                                    {{ form_widget(formN.Cancel, { 'attr': {'class': 'btn btn-danger btn-block btn-lg gradient-custom-4 text-body'}}) }}
-
-                                </div>
-                                {{ form_end(formN) }}
-                                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
-                                                                                                        class="fw-bold text-body"><u>Login
-                                            here</u></a></p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="card">
+        <div class="card-body">
+            <!-- Logo -->
+            <div class="app-brand justify-content-center">
+                <a href="/" class="app-brand-link gap-2">
+                    <img src="{{ asset('images/SAHTI without bg.png') }} " height="150px" width="100%" />
+                </a>
             </div>
+            <!-- /Logo -->
+            <div class="text-center">
+                 <img src="{{ asset('images/nutritionist.png') }} "  height="90px" width="30%" />
+                 <h4 class="mb-2">Adventure starts here 🚀</h4>
+                 <p class="mb-4">Start your journey as one of our nutritionists</p>
+            </div>
+            {{ form_start(formN, {'attr': {'novalidate':'novalidate'}}) }}
+
+            <div class="mb-3">
+                {{ form_widget(formN.nom, { 'attr': {'class': 'form-control','style': 'width: 350px'} })}}
+                {{ form_errors(formN.nom) }}
+
+            </div>
+            <div class="mb-3">
+                {{ form_widget(formN.prenom, { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                {{ form_errors(formN.prenom) }}
+
+            </div>
+            <div class="mb-3">
+                {{ form_widget(formN.email, { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                {{ form_errors(formN.email) }}
+
+            </div>
+            <div class="mb-3 form-password-toggle">
+                <div class="input-group input-group-merge">
+                    {{ form_widget(formN.passwd, { 'attr': {'class': 'form-control'} }) }}
+                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                </div>
+                {{ form_errors(formN.passwd) }}
+
+            </div>
+            <div class="mb-3">
+                {{ form_widget(formN.adresse , { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                {{ form_errors(formN.adresse) }}
+
+            </div>
+            <div class="mb-3">
+                {{ form_widget(formN.bio , { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                {{ form_errors(formN.bio) }}
+
+            </div>
+            <div class="mb-3">
+                {{ form_widget(formN.certification , { 'attr': {'class': 'form-control','style': 'width: 350px'} }) }}
+                {{ form_errors(formN.certification) }}
+
+            </div>
+            <div class="mb-3">
+                {#                class="form-control"#}
+                <label class="form-label" >Profile Picture</label>
+                {{ form_widget(formN.imgFile , { 'attr': {'class': 'form-control'} }) }}
+                {{ form_errors(formN.imgFile) }}
+
+            </div>
+            {{ form_widget(formN.Registre, { 'attr': {'class': 'btn btn-primary d-grid w-100'}}) }}
+            {{ form_widget(formN.Cancel, { 'attr': {'class': 'btn btn-danger d-grid w-100'}}) }}
+            {{ form_end(formN) }}
+
+
+            <p class="text-center">
+                <span>Already have an account?</span>
+                <a href="/login">
+                    <span>Sign in instead</span>
+                </a><br>
+                <a href="/signupin">
+                    <span>Create an another type of account</span>
+                </a>
+            </p>
         </div>
-    </section>
+    </div>
+
 {% endblock %}
 
